alignment fix 1

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -48,7 +48,7 @@ img {
   margin-left: 0;
 }
 .assist-block > .button {
-  margin-top: 20px;
+  margin: 20px 0px;
   width: 100%;
   text-align: center;
   max-width: none;
